UPDATED MY HTML

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <span><i class="ri-star-fill"></i></span>
             </div>
             <div class="special__footer">
-              <p class="price">$12.50</p>
+              <p class="price">R105.99</p>
               <button class="btn">Add to Cart</button>
             </div>
           </div>
@@ -86,7 +86,7 @@
               <span><i class="ri-star-fill"></i></span>
             </div>
             <div class="special__footer">
-              <p class="price">$18.50</p>
+              <p class="price">R159.87</p>
               <button class="btn">Add to Cart</button>
             </div>
           </div>
@@ -104,7 +104,7 @@
               <span><i class="ri-star-fill"></i></span>
             </div>
             <div class="special__footer">
-              <p class="price">$15.50</p>
+              <p class="price">R120.00</p>
               <button class="btn">Add to Cart</button>
             </div>
           </div>
